# product-categorisation-api

./: .gitignore  README.md  data_scientist_challenge.md  hello.py  pyproject.toml
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  cat_boost_experiment_with_image.ipynb  cat_boost_experiment_without_image.ipynb  classification_report.json  embeddings_experiment.ipynb  model_training_experiments.ipynb  random_sampler_experiment.ipynb
reports/: future_implications.md
src/: consts.py  data_ingester.py  dataset_creator.py  exceptions_.py  get_data.py  image_embeddings_generator.py  images_downloader.py  train_embeddings_no_image.py  train_mlflow_logging_no_image.py  train_no_image.py  train_with_image.py
